src/test/ui/error-codes/E0777.rs
#[derive("Clone")] //~ ERROR E0777
struct Foo;

fn main() {}
